# cutile-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: pr.yml
cuda-async/tests/: pool_allocation.rs
cutile-benchmarks/paper/: .gitattributes  MACHINE.md  README.md  lock_clocks.sh
cutile-benchmarks/paper/app_exp1_work_distribution/: README.md  plot_bimodal.py  plot_bimodal_w.py  run_bimodal.sh  run_bimodal_w.sh
cutile-benchmarks/paper/app_exp1_work_distribution/bimodal_gemms_rust/: Cargo.toml  results_bimodal.csv  results_bimodal_w.csv
cutile-benchmarks/paper/app_exp1_work_distribution/bimodal_gemms_rust/src/: main.rs
cutile-benchmarks/paper/sec3_example1_race_detection/: README.md  permute_race.py  permute_race_rust.rs
cutile-benchmarks/paper/sec5_exp1_safety_overhead/: README.md
cutile-benchmarks/paper/sec5_exp1_safety_overhead/rust/elemwise/: Cargo.toml
cutile-benchmarks/paper/sec5_exp1_safety_overhead/rust/elemwise/.cargo/: config.toml
cutile-benchmarks/paper/sec5_exp1_safety_overhead/rust/elemwise/src/: main.rs
cutile-benchmarks/paper/sec5_exp2_execution_mode_overhead/: README.md  plot_part_a.py  plot_part_b.py  run.sh  run_part_b.sh
cutile-benchmarks/paper/sec5_exp2_execution_mode_overhead/launch_overhead_rust/: Cargo.toml  results_part_a.csv  results_part_b.csv
cutile-benchmarks/paper/sec5_exp2_execution_mode_overhead/launch_overhead_rust/.cargo/: config.toml
cutile-benchmarks/paper/sec5_exp2_execution_mode_overhead/launch_overhead_rust/src/: main.rs
cutile-benchmarks/paper/sec5_exp3_end_to_end_inference/: .gitignore  README.md  plot_grout_sweep.py
cutile-book/: conf.py  index.md
cutile-book/guide/: interoperability.md  introduction.md  thinking-in-tiles.md
cutile-compiler/src/: cuda_tile_runtime_utils.rs  specialization_tests.rs
cutile-examples/examples/: cuda_graphs.rs  cuda_graphs_deviceop.rs
cutile-ir/: Cargo.toml
cutile-ir/examples/: decode_real.rs
cutile-ir/src/: lib.rs
cutile-ir/src/bytecode/: decoder.rs  enums.rs  opcode.rs  writer.rs
cutile-ir/tests/: bytecode_fixtures.rs  bytecode_version.rs  per_op_roundtrip.rs
cutile-kernels/: Cargo.toml  README.md
cutile-kernels/src/: argmax.rs  attention.rs  embeddings.rs  kv_cache.rs  lib.rs  norms.rs  pointwise.rs  positional.rs
cutile-kernels/src/experimental/: attention.rs  fused_transformer.rs  kvbm.rs  mod.rs  moe.rs  norms.rs
cutile-kernels/tests/: smoke.rs
cutile/src/: error.rs  tile_kernel.rs
cutile/tests/: trait_dispatch_probe.rs
(+45 files in other folders)
