[package]
name = "cutile-ir"
description = "Pure Rust Tile IR representation and bytecode writer for cuTile."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
half = { workspace = true }
indexmap = "2"
num-derive = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
half = { workspace = true }
