[package]
name = "cutile-kernels"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Reusable cuTile Rust kernels."
readme = "README.md"

[dependencies]
cutile = { workspace = true }
cutile-compiler = { workspace = true }
