[package]
name = "bimodal-gemms-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
publish = false

[[bin]]
name = "bimodal_gemms"
path = "src/main.rs"

[dependencies]
cuda-core = "0.1.1"
cuda-async = "0.1.1"
cutile = "0.1.1"
cutile-macro = "0.1.1"
cutile-compiler = "0.1.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }

[profile.release]
opt-level = 3
lto = "thin"

[workspace]
